Sun, 28 Jan 2007 16:17:40 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Comment-out deletion of partial 
          downloads for now (so we won't have broken, finished downloads)
        * src/gpodder/gpodder.py.orig: Updated by tepache
        * data/messages.pot: Updated from source code files
        * data/po/de.po: Updated German translation

Sun, 28 Jan 2007 10:20:26 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Fixed a small encoding warning
        * data/gpodder.glade: Added color chooser tab in preferences
        * src/gpodder/libgpodder.py: Added support for loading/saving 
          episode list color values + default values
        * src/gpodder/libpodcasts.py: Added support for color config
        * src/gpodder/gpodder.py: Added support for episode list colors

Sun, 28 Jan 2007 09:21:47 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Added mediatype flag for iPod nano 
          as suggested by José Luis Fustel (dr_psy terra.es) - thanks!
        * AUTHORS: Added JLF to list of patch writers
        * bin/gpodder: pushed release date + version

Wed, 24 Jan 2007 22:33:30 +0100 <thp@perli.net>
        * TODO: Updated TODO list

Wed, 24 Jan 2007 22:26:15 +0100 <thp@perli.net>
        * data/gpodder.desktop: Added Spanish translation for desktop file
        * data/po/es.po: Updated Spanish translation from José Luis

Tue, 23 Jan 2007 20:59:33 +0100 <thp@perli.net>
        * data/po/es.po: Spanish translation file from José Luis
          Fustel (dr_psy@terra.es) -- thanks!
        * setup.py: Added Spanish translation

Mon, 22 Jan 2007 13:15:11 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Fix based on a patch from Robert
          Young (robertkyoung gmail.com) to replace special characters 
          in channel folder name on MP3 player sync
        * AUTHORS: added Robert Young to list of patch writers

Mon, 22 Jan 2007 13:07:51 +0100 <thp@perli.net>